# notion-csv-to-anki

./: .gitignore  notion_html_to_anki_csv.py  pyproject.toml
